@@ -1,6 +1,9 @@
 sysvinit (2.89dsf) UNRELEASED; urgency=low
 
   [ Werner Fink ]
+  * Fix counting message lines in wall. Patch from Petr Lautrbach.
+  * Fix bad printf conversion specifier in wall. Patch from Sébastien Luttringer.
+  * Add patches from Openwall project. Thanks goes to Solar Designer.
   * Add code to detect the system consoles with the help of the
     new /proc/consoles files of linux kernel 2.6.38+
   * Try to make utmpdump IPv6 valid, change based on suggestion from
